# Python-DeepSeekChat

./: .gitignore  README.md  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup.cfg
utils/Models/OpenAI/: openai_choice_model.py  openai_message_model.py  openai_response_model.py  user_message_model.py
utils/ViewModels/: deep_seek_vm.py  openai_chat_vm.py
utils/consts/: consts.py
utils/helpers/: enums.py  errors.py
utils/models/DeepSeek/: deep_seek_choice_model.py  deep_seek_message_model.py  deep_seek_response_model.py  openai_choice_model.py
utils/services/API/: open_ai_service.py
utils/services/API/Base/: open_ai_service_base.py
utils/services/API/DeepSeekService/: deep_seek_service.py
utils/services/API/Mock/: open_ai_service_mock.py
utils/services/API/Production/: open_ai_service.py
utils/services/ServiceLocator/: service_locator.py
utils/services/ServiceLocator/configs/: deep_seek_config.py  open_ai_config.py
utils/services/base/: deep_seek_service_base.py
utils/services/mock/API/DeepSeekService/: deep_seek_service_mock.py
utils/services/mock/DeepSeekService/: deep_seek_service_mock.py
utils/services/production/API/DeepSeekService/: deep_seek_service.py
utils/services/production/DeepSeekService/: deep_seek_service.py
utils/view_models/: deep_seek_vm.py
