[project]
name = "python-openai-chat"
version = "0.1.0"
description = "OpenAI Chat Application"
requires-python = ">=3.8"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pylint]
max-line-length = 88
disable = ["C0111", "C0103"]
ignore = ["CVS"]
ignore-patterns = [""]
persistent = "yes"
